--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <head>
-
+    <title>JVR Helpline</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel = "icon" href = "pictures/phone.png">
 </head>
 <body>
-    <h1>test</h1>
+    <div class = "intro">
+        <h1>Welcome To JVR Helpline!</h1>
+        <h3>click "Start" to get started</h3>
+        <h3>click "Get Help" to immediately get a list of resources!</h3>
+    </div>
+    <br><br>
+    <div class = "start"><a href = "questions.html"><button type="button"><h1>START</h1></button></a></div>
+    <br><br>
+    <div class = "results"><a href = "results.html"><button type="button"><h1>GET HELP</h1></button></a></div>
 </body>
